Lagt til context path og begynt med OpenApi